--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "registro-asistencia-attendance",
   "version": "0.1.0",
+  "homepage": "http://JuanSe320.github.io/registro-asistencia-attendance",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
@@ -17,6 +19,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
